# gxci

./: Cargo.toml  ControlList.md  Docsrs.md  LICENSE  Readme.md  SECURITY.md  convertFromCapi.md
doc/dev/: c_struct.md  convertFromCapi.md  dev_note.md
examples/: hal_capture_callback.rs  hal_config_enum.rs  hal_config_gain.rs  hal_config_string.rs  hal_get_image.rs  hal_get_image_raw.rs  hal_get_string.rs  hal_list_devices_info.rs  hal_use_stream.rs  match_feature_type.rs  raw_callback_capture.rs  raw_get_image.rs  raw_list_devices_info.rs  raw_open_device_by_index.rs  raw_open_device_by_sn.rs
examples/hal_stream_grpc/: Cargo.toml  build.rs
examples/hal_stream_tauri/: README.md  package-lock.json  package.json
examples/hal_stream_tauri/src/: App.vue
examples/hal_stream_tauri/src-tauri/: Cargo.toml  tauri.conf.json
examples/hal_stream_ws/: Cargo.toml
src/: error.rs  lib.rs
src/hal/: base.rs  basement.rs  check.rs  config.rs  device.rs  event.rs  mod.rs  network.rs
src/hal/control/: acquisition.rs  analog.rs  chunk_data.rs  device.rs  digital_io.rs  image_format.rs  mod.rs  transport_layer.rs  user_set.rs
src/raw/: gx_callback.rs  gx_const.rs  gx_enum.rs  gx_handle.rs  gx_interface.rs  gx_pixel_format.rs  gx_struct.rs
src/utils/: builder.rs  cv_gui.rs  debug.rs  extract.rs  facade.rs  image_process.rs  imgproc.rs  matching.rs  mod.rs  status.rs
tests/: hal.rs
