[package]
name = "gxci"
version = "0.2.0"
edition = "2021"
authors = [
    "Hako Chest <zoneherobrine@gmail.com>"
]
rust-version = "1.80.0"
description = "A raw and HAL camera interface based on Daheng-Image's GxIAPI(Galaxy Camera SDK)"
keywords = ["galaxy", "daheng", "camera","interface","hal"]
categories = ["hardware-support"]
license = "MIT"
documentation = "https://docs.rs/gxci"
repository = "https://github.com/zoneherobrine/gxci"

[dependencies]
libloading = "0.8.5"
image = "0.25.2"
opencv = "0.92.0"


[features]
default = ["solo"]
solo = []   # 单个相机特性
multi = []  # 多个相机特性
no-opencv = []  # 不使用opencv特性