[package]
name = "gxci"
version = "0.3.1"
edition = "2021"
authors = [
    "Hako Chest <zoneherobrine@gmail.com>"
]
rust-version = "1.80.0"
description = "A safe raw-and-HAL camera interface based on Daheng-Image's GxIAPI(Galaxy Camera SDK)"
keywords = ["galaxy", "daheng", "camera","interface","hal"]
categories = ["hardware-support"]
license = "MIT"
documentation = "https://docs.rs/gxci"
repository = "https://github.com/zoneherobrine/gxci"

[dependencies]
libloading = "0.8.5"
image = "0.25.2"
imageproc = { version = "0.25.0", optional = true }
opencv = { version = "0.92.3", optional = true }

[features]
# default = ["solo", "use-opencv", "use-imageproc"]
default = ["solo", "use-opencv"]
# default = ["solo", "use-imageproc"]
solo = []
multi = []
use-opencv = ["opencv"]
use-imageproc = ["imageproc"]
