[package]
name = "gxci"
version = "0.3.6"
edition = "2021"
authors = [
    "Hako Chest <zoneherobrine@gmail.com>"
]
rust-version = "1.80.0"
description = "A safe raw-and-HAL camera interface based on Daheng-Image's GxIAPI(Galaxy Camera SDK)"
keywords = ["galaxy", "daheng", "camera","interface","hal"]
categories = ["hardware-support"]
license = "MIT"
documentation = "https://docs.rs/gxci"
repository = "https://github.com/zoneherobrine/gxci"

[dependencies]
libloading = "0.8.6"
image = "0.25.5"
imageproc = { version = "0.25.0", optional = true }
opencv = { version = "0.93.5", optional = true }

[features]
default = [ "solo", "use-opencv" ]
solo = []
multi = []
use-opencv = ["opencv"]
use-imageproc = ["imageproc"]
